Fix: surnames with prefixes wrapping in tag-clouds

--- a/themes/cloudy/style.css
+++ b/themes/cloudy/style.css
@@ -1576,7 +1576,7 @@ a.showit:hover span {
 	font-family: tahoma, arial, helvetica, sans-serif;
 }
 .tag_cloud a {
-	wrap:none;
+	white-space:nowrap;
 }
 
 /* Autocomplete styles*/
