--- a/themes/webtrees/style.css
+++ b/themes/webtrees/style.css
@@ -1247,7 +1247,7 @@ a.showit:hover span {
 	font-family: tahoma, arial, helvetica, sans-serif;
 }
 .tag_cloud a {
-	wrap:none;
+	white-space:nowrap;
 }
 
 /* Autocomplete styles*/
