--- a/themes/xenea/style.css
+++ b/themes/xenea/style.css
@@ -1348,7 +1348,7 @@ a.showit:hover span {
 	font-family: tahoma, arial, helvetica, sans-serif;
 }
 .tag_cloud a {
-	wrap:none;
+	white-space:nowrap;
 }
 
 /* Autocomplete styles*/
